<resources>
    <string name="app_name">LaRoomy</string>
    <string name="app_version">App-Version 1.1.0</string>
    <string name="MA_AvailableDevicesPresentationTextViewText">Devices</string>
    <string name="MA_NoAvailableDevices">No devices found. Please make sure the device is bonded to the system.</string>
    <string name="MA_PopUp_SettingsTitle">Settings</string>
    <string name="MA_PopUp_InformationTitle">App-Info</string>
    <string name="MA_PopUp_HelpTitle">Help Topics</string>
    <string name="MA_PopUp_ShowLogTitle">Show Log</string>
    <string name="MA_PopUp_ReloadList">Reload List</string>
    <string name="MA_UserNotificationDialogTitle">Notification</string>
    <string name="MA_NoContentUserHintText">Nothing to show.\nAdd your first device.</string>
    <string name="MA_BluetoothNotEnabledHintText">The base functionality of this App is to connect to bluetooth devices. Therefore bluetooth must be enabled. Tap here to enable bluetooth.</string>
    <string name="MA_BluetoothPermissionMissionHintText">The base functionality of this App is to connect to bluetooth devices. Therefore it needs your permission to access bluetooth devices on this phone and connect to it. Tap here to grant the permission.</string>
    <string name="MainActivity_ActionBannerText_TestPeriodActive">You are in a 30 days test period with full access to all app capabilities</string>
    <string name="MainActivity_ActionBannerText_UnpaidVersion">You are using this app with restricted capabilities. Become a premium app user to unleash the full potential.</string>
    <string name="MainActivity_ActionBanner_MoreInfoButtonText">More Info</string>
    <string name="MainActivity_ActionBanner_DoNotShowAgainButtonText">Hide</string>
    <string name="MainActivity_ActionBanner_ButtonTextPurchase">Unlock Premium</string>
    <string name="CA_Connecting">Connecting..</string>
    <string name="CA_Connected">Connected</string>
    <string name="CA_Initialize">Initialize..</string>
    <string name="CA_LoadingProperties">Loading Properties..</string>
    <string name="CA_AuthSuccess">Authentication success - Checking Device Properties</string>
    <string name="CA_BindingPasskeyRejected">Invalid binding-passkey: connection rejected</string>
    <string name="CA_BindingNotActivated">Binding required but not activated in App-Settings</string>
    <string name="CA_TimeoutForConnection">Timeout: Device not reachable</string>
    <string name="CA_ErrorDeviceListIndexInvalid">Invalid Device-List index</string>
    <string name="CA_ErrorDeviceAddressAccessException">Critical error. Index out of bounds.</string>
    <string name="CA_InitTimeoutOccurred">Timeout: Remote device not responding</string>
    <string name="CA_TransmissionTimeoutOccurred">Transmission timeout: Remote device not responding</string>
    <string name="CA_FirstTimeoutSecondTryout">Cannot connect to device. Trying again..</string>
    <string name="LoadingActivity_NoPremiumStandAloneNotAllowed">The requested device property is a premium feature. Connection process will be aborted.</string>
    <string name="DMA_ConnectionStatus_disconnected">disconnected</string>
    <string name="DMA_ConnectionStatus_disconnected_tryToReconnect">disconnected - trying to reconnect</string>
    <string name="DMA_ConnectionStatus_connected">connected</string>
    <string name="DMA_Ready">Ready</string>
    <string name="DMA_DeviceConnectionSuspended">Connection suspended</string>
    <string name="DMA_LoadingPropertiesUserInfo">Loading Properties..</string>
    <string name="DMA_NoConnection">No connection</string>
    <string name="DMA_ErrorElementText">error:type !</string>
    <string name="DMA_PopUpMenuText_DeviceSettings">Device Settings</string>
    <string name="DMA_PopUpMenuText_DiscardDevice">Close Device</string>
    <string name="DMA_PopUpMenuText_ReloadProperties">Reload Properties</string>
    <string name="DMA_ReconnectDevice">Resuming Connection..</string>
    <string name="DMA_WaitForComplexClickMessage">Background state update in progress. Please wait a second and try again.</string>
    <string name="DMA_PropertyDataLoadingIncomplete">Property data could not be fully loaded. Click here to try again.</string>
    <string name="RGB_HeaderText">RGB Control</string>
    <string name="RGB_OnOff">On / Off</string>
    <string name="RGB_SingleColorModeButtonText">Single Color</string>
    <string name="RGB_TransitionModeButtonText">Transition</string>
    <string name="RGB_TransitionSpeedSeekBarText">Transition Speed</string>
    <string name="RGB_SoftTransitionSwitchText">Soft Transition</string>
    <string name="ELS_HeaderText">Ex Level Select</string>
    <string name="ELS_OnOff">On / Off</string>
    <string name="STS_HeaderText">Time Selector</string>
    <string name="STS_Hours">Hours</string>
    <string name="STS_Minutes">Minutes</string>
    <string name="STS_Seconds">Seconds</string>
    <string name="STS_TimePlaceholder">00 : 00</string>
    <string name="NavCon_HeaderText">Navigator</string>
    <string name="TFS_HeaderText">Time-Frame Selector</string>
    <string name="TFS_From">From</string>
    <string name="TFS_To">To</string>
    <string name="DateSelector_HeaderText">Date Selector</string>
    <string name="BarGraphActivity_HeaderText">Bar Graph View</string>
    <string name="LineGraphActivity_HeaderText">Line Graph View</string>
    <string name="StringInterrogatorActivity_HeaderText">String Interrogator</string>
    <string name="StringInterrogatorActivity_FieldOneDescriptorPlaceholder">Field 1</string>
    <string name="StringInterrogatorActivity_FieldTwoDescriptorPlaceholder">Field 2</string>
    <string name="StringInterrogatorActivity_ButtonPlaceholderText">Submit</string>
    <string name="StringInterrogatorActivity_InvalidInputMessage">The entered text is invalid. It must not contain a double semicolon (;;) and must not contain only of an underscore (_).</string>
    <string name="StringInterrogatorActivity_InvalidAsciiInputMessage_FieldOne">Field one contains invalid characters.</string>
    <string name="StringInterrogatorActivity_InvalidAsciiInputMessage_FieldTwo">Field two contains invalid characters.</string>
    <string name="StringInterrogatorActivity_InputIsNotAsciiConform">The entered text is invalid. Only ASCII characters are allowed.</string>
    <string name="TextListPresenter_HeaderText">Text List Presenter</string>
    <string name="TextListPresenter_FilterPopUpHeaderText">Filter</string>
    <string name="TextListPresenter_FilterUserHintText">Filter elements by type:</string>
    <string name="TextListPresenter_FilterElementDefault">Default</string>
    <string name="TextListPresenter_FilterElementInfo">Information</string>
    <string name="TextListPresenter_FilterElementWarning">Warning</string>
    <string name="TextListPresenter_FilterElementError">Error</string>
    <string name="TextListPresenter_FilterActionButtonApply">Apply</string>
    <string name="TextListPresenter_FilterActionButtonCancel">Cancel</string>
    <string name="UnlockCtrl_HeaderText">Unlock Control</string>
    <string name="UnlockCtrl_ConditionText_Locked">Locked</string>
    <string name="UnlockCtrl_ConditionText_Unlocked">Unlocked</string>
    <string name="UnlockCtrl_PinEntryText">PIN:</string>
    <string name="UnlockCtrl_ButtonText_Show">Show</string>
    <string name="UnlockCtrl_ButtonText_Hide">Hide</string>
    <string name="UnlockCtrl_PopupHeaderText">Change Pin</string>
    <string name="UnlockCtrl_PopupCurrentPinDescriptorText">Current Pin:</string>
    <string name="UnlockCtrl_PopupNewPinDescriptorText">New Pin:</string>
    <string name="UnlockCtrl_PopupRepeatNewPinDescriptorText">Repeat new Pin:</string>
    <string name="UnlockCtrl_PopupCancelButtonText">Cancel</string>
    <string name="UnlockCtrl_PopupPositiveButtonText">Change</string>
    <string name="UnlockCtrl_LockHintMessageText">Tap image to lock</string>
    <string name="UnlockCtrl_PinChangeFailedWrongPin">Pin change failed - wrong pin.</string>
    <string name="UnlockCtrl_PinChangeSuccess">Pin changed successful.</string>
    <string name="GeneralMessage_reconnected">Device reconnected</string>
    <string name="GeneralMessage_connectionSuspended">Connection suspended</string>
    <string name="GeneralMessage_resumingConnection">Resuming connection - please wait</string>
    <string name="GeneralMessage_connectingFailed">Connection failed:</string>
    <string name="GeneralString_OK">OK</string>
    <string name="GeneralString_Cancel">Cancel</string>
    <string name="GeneralString_Delete">Delete</string>
    <string name="GeneralString_UnexpectedConnectionLossMessage">The connection was interrupted. Reconnect?</string>
    <string name="GeneralString_ConnectionLossDialogTitle">Connection Error</string>
    <string name="InfoActivity_HeaderText">LaRoomy</string>
    <string name="InfoActivity_AppDescription">Dynamic Remote Control</string>
    <string name="InfoActivity_AppVersionEntry">App-Version </string>
    <string name="InfoActivity_CopyrightLaroomySoft">&#169; 2023 Hans Philipp Zimmermann</string>
    <string name="InfoActivity_CEOHansZimmermann">CEO Hans Philipp Zimmermann</string>
    <string name="InfoActivity_AllRightsReserved">All rights reserved</string>
    <string name="InfoActivity_ImprintAndContact">Imprint &amp; Contact</string>
    <string name="InfoActivity_ImprintName" translatable="false">Hans Philipp Zimmermann</string>
    <string name="InfoActivity_ImprintAddressOne" translatable="false">33415 Verl-Kaunitz</string>
    <string name="InfoActivity_ImprintAddressTwo" translatable="false">Nordrhein-Westfalen, Germany</string>
    <string name="InfoActivity_MailTo">info@laroomy.de</string>
    <string name="InfoActivity_PrivacyPolicyHeader">Privacy Policy</string>
    <string name="InfoActivity_PrivacyPolicy_Text">Thank you for using this application. The protection of your data is an important matter for me and I want that you feel secure. This page is used to inform users regarding my policies with the collection, use, and disclosure of Personal Information if anyone decided to use my Service. If you choose to use my Service, then you agree to the collection and use of information in relation to this policy.</string>
    <string name="InfoActivity_PP_InformationCollectionAndUse_Header">Information Collection and Use</string>
    <string name="InfoActivity_PP_InformationCollectionAndUse_Text">The app does not collect any personal data. But the app does use third party services that may collect information used to identify you. Link to privacy policy of third party service providers used by the app:</string>
    <string name="InfoActivity_PP_ThirdPartyServiceLink_one">Google Play Services</string>
    <string name="InfoActivity_PP_LogDataHeader">Log Data</string>
    <string name="SetupActivity_Design_Light">Light</string>
    <string name="SetupActivity_Design_Dark">Dark</string>
    <string name="SetupActivity_Design_SystemDefault">System Default</string>
    <string name="SetupActivity_DesignSelectionPopUpHeaderText">Design Selection</string>
    <string name="ResetAppActivity_HeaderText">Reset Data</string>
    <string name="ResetAppActivity_SelectDataActionText">Select the data you want to reset:</string>
    <string name="ResetAppActivity_SelectAllCheckBoxText">Select all</string>
    <string name="ResetAppActivity_ResetAppSettingsCheckBoxText">App Settings</string>
    <string name="ResetAppActivity_ResetBindingDataCheckBoxText">Binding Data</string>
    <string name="ResetAppActivity_ResetUUIDProfilesCheckBoxText">UUID Profiles</string>
    <string name="ResetAppActivity_ResetDefaultBindingKeyCheckBoxText">Default Binding Key</string>
</resources>