<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/settingsMenuItem"
        android:icon="@drawable/main_settings_norm"
        android:title="@string/MA_PopUp_SettingsTitle" />
    <item
        android:id="@+id/informationMenuItem"
        android:icon="@drawable/main_info_norm"
        android:title="@string/MA_PopUp_InformationTitle" />
    <item
        android:id="@+id/helpMenuItem"
        android:icon="@drawable/main_help_norm"
        android:title="@string/MA_PopUp_HelpTitle" />
    <item
        android:id="@+id/showLogMenuItem"
        android:icon="@drawable/main_show_log_norm"
        android:title="@string/MA_PopUp_ShowLogTitle" />
    <item
        android:id="@+id/reloadListMenuItem"
        android:icon="@drawable/main_reload_norm"
        android:title="@string/MA_PopUp_ReloadList" />
</menu>