<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResetAppDataActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/resetAppActivityHeaderTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ResetAppActivity_HeaderText"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/resetAppActivityHeaderSeparator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/separatorColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/resetAppActivityHeaderTextView" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/resetAppActivityDataToResetTextView"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:textSize="20sp"
        android:text="@string/ResetAppActivity_SelectDataActionText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/resetAppActivityHeaderSeparator"
        />

    <androidx.appcompat.widget.AppCompatCheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/resetAppActivitySelectAllCheckBox"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:textSize="18sp"
        android:text="@string/ResetAppActivity_SelectAllCheckBoxText"
        app:layout_constraintTop_toBottomOf="@id/resetAppActivityDataToResetTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/resetAppCheckBoxContainer"
        android:layout_marginTop="30dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toBottomOf="@id/resetAppActivitySelectAllCheckBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >

    <androidx.appcompat.widget.AppCompatCheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/resetAppActivityResetAppSettingsCheckBox"
        android:text="@string/ResetAppActivity_ResetAppSettingsCheckBoxText"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <androidx.appcompat.widget.AppCompatCheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/resetAppActivityResetBindingDataCheckBox"
        android:layout_marginTop="20dp"
        android:text="@string/ResetAppActivity_ResetBindingDataCheckBoxText"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/resetAppActivityResetAppSettingsCheckBox"
        />

    <androidx.appcompat.widget.AppCompatCheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/resetAppActivityResetUUIDProfilesCheckBox"
        android:layout_marginTop="20dp"
        android:text="@string/ResetAppActivity_ResetUUIDProfilesCheckBoxText"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/resetAppActivityResetBindingDataCheckBox"
        />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/resetAppActivityResetDefaultBindingKeyCheckBox"
            android:layout_marginTop="20dp"
            android:text="@string/ResetAppActivity_ResetDefaultBindingKeyCheckBoxText"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/resetAppActivityResetUUIDProfilesCheckBox"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>