<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/setup_activity_popup_background"
    android:maxWidth="340dp"
    android:minWidth="320dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/setupActivity_DesignPopUp_HeaderTextView"
        android:text="@string/SetupActivity_DesignSelectionPopUpHeaderText"
        android:layout_marginStart="22dp"
        android:layout_marginTop="16dp"
        android:textSize="22sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/setupActivity_DesignPopUp_RadioGroup"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setupActivity_DesignPopUp_HeaderTextView"
        >
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/setupActivity_DesignPopUpRadioButton_Light"
            android:minHeight="48dp"
            android:text="@string/SetupActivity_Design_Light"
            android:textSize="20sp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:paddingStart="16dp"
            android:paddingEnd="0dp"
            />
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/setupActivity_DesignPopUpRadioButton_Dark"
            android:minHeight="48dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="30dp"
            android:text="@string/SetupActivity_Design_Dark"
            android:textSize="20sp"
            android:layout_marginStart="30dp"
            android:paddingStart="16dp"
            android:paddingEnd="0dp"
            />
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/setupActivity_DesignPopUpRadioButton_SystemDefault"
            android:minHeight="48dp"
            android:text="@string/SetupActivity_Design_SystemDefault"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="30dp"
            android:textSize="20sp"
            android:layout_marginStart="30dp"
            android:paddingStart="16dp"
            android:paddingEnd="0dp"
            />
    </RadioGroup>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/setupActivity_DesignPopUp_CancelButton"
        android:text="@string/GeneralString_Cancel"
        android:background="@color/setup_activity_popup_background_color"
        android:textSize="16sp"
        android:textColor="@color/colorAccent"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        style="?android:attr/borderlessButtonStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setupActivity_DesignPopUp_RadioGroup"/>

</androidx.constraintlayout.widget.ConstraintLayout>