<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:minWidth="300dp"
    android:maxWidth="360dp"
    android:padding="20dp"
    android:background="@drawable/text_list_presenter_popup_background">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textListPresenterFilterPopUpUserHintTextView"
        android:textSize="18sp"
        android:text="@string/TextListPresenter_FilterUserHintText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textListPresenterFilterPopUpRadioButtonContainer"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textListPresenterFilterPopUpUserHintTextView"
        >

        <RadioButton
            android:id="@+id/textListPresenterFilterPopUpRadioButton_Default"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:minWidth="150dp"
            android:text="@string/TextListPresenter_FilterElementDefault"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioButton
            android:id="@+id/textListPresenterFilterPopUpRadioButton_Info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:minWidth="150dp"
            android:layout_marginTop="5dp"
            android:text="@string/TextListPresenter_FilterElementInfo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textListPresenterFilterPopUpRadioButton_Default" />

        <RadioButton
            android:id="@+id/textListPresenterFilterPopUpRadioButton_Warning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:minWidth="150dp"
            android:layout_marginTop="5dp"
            android:text="@string/TextListPresenter_FilterElementWarning"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textListPresenterFilterPopUpRadioButton_Info" />

        <RadioButton
            android:id="@+id/textListPresenterFilterPopUpRadioButton_Error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:minWidth="150dp"
            android:layout_marginTop="5dp"
            android:text="@string/TextListPresenter_FilterElementError"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textListPresenterFilterPopUpRadioButton_Warning" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textListPresenterFilterPopUpActionButtonContainer"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/textListPresenterFilterPopUpRadioButtonContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textListPresenterFilterPopUpCancelButton"
            android:text="@string/TextListPresenter_FilterActionButtonCancel"
            android:background="@drawable/general_other_contrast_rounded_button_background"
            android:minWidth="110dp"
            android:textAllCaps="false"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textListPresenterFilterPopUpApplyButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textListPresenterFilterPopUpApplyButton"
            android:text="@string/TextListPresenter_FilterActionButtonApply"
            android:background="@drawable/general_other_contrast_rounded_button_background"
            android:textAllCaps="false"
            android:minWidth="110dp"
            android:layout_marginStart="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textListPresenterFilterPopUpCancelButton"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>